# shields.rs

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: og.yml  release.yml
benches/: flat.rs
shield/: Cargo.toml
shield/src/: main.rs
src/: builder.rs  lib.rs  measurer.rs
tests/: svg_compare.rs
