[package]
name = "shields"
version = "0.2.0"
edition = "2024"
authors = ["Jannchie <jannchie@gmail.com>"]
description = "A high-performance badge rendering engine written in Rust. As same as shields.io."
license = "MIT"
repository = "https://github.com/Jannchie/shields"
keywords = ["badge", "SVG", "renderer", "font", "Rust"]
categories = ["graphics", "rendering", "web-programming"]
include = ["assets/**", "templates/**", "src/lib.rs", "src/measurer.rs"]
homepage = "https://github.com/Jannchie/shields"
documentation = "https://docs.rs/shields"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
once_cell = "1"
serde_json = "1"
ttf-parser = "0.19"
lru = "0.12"

xmltree = "0.10.3"
regex = "1.11.1"
askama = "0.14.0"

[dev-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sha2 = "0.10"
urlencoding = "2"
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8"
pretty_assertions = "1"

[[bench]]
name = "flat"
harness = false
