[package]
name = "shields"
version = "0.7.0"
edition = "2024"
authors = ["Jannchie <jannchie@gmail.com>"]
description = "A high-performance badge rendering engine written in Rust. As same as shields.io."
license = "MIT"
repository = "https://github.com/Jannchie/shields"
keywords = ["badge", "SVG", "renderer", "font", "Rust"]
categories = ["graphics", "rendering", "web-programming"]
include = ["assets/**", "templates/**", "src/**", "Cargo.toml", "README.md"]
homepage = "https://github.com/Jannchie/shields"
documentation = "https://docs.rs/shields"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
once_cell = "1"
serde_json = "1"
lru = "0.14.0"

xmltree = "0.11.0"
regex = "1.11.1"
askama = "0.14.0"
base64 = "0.22.1"
simpleicons = "0.3.0"
csscolorparser = "0.7.2"

[dev-dependencies]
reqwest = { version = "0.12.20", features = ["blocking"] }
urlencoding = "2"
criterion = { version = "0.6.0", features = ["html_reports"] }
rand = "0.9.1"
pretty_assertions = "1"
md5 = "0.7.0"

[[bench]]
name = "flat"
harness = false
